# nakji-template-v1

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  eksctl_deploy.yml
application/backend/: .dockerignore  Dockerfile
application/backend/application/: .gitignore  entrypoint.sh  pyproject.toml  requirements.txt  run_local.sh  setup.cfg  wsgi.py
application/backend/application/flask_app/: alembic.ini  app.py  config.py  conftest.py
application/backend/application/flask_app/alembic/: env.py
application/backend/application/flask_app/alembic/versions/: 0ebce3935741_create_user_table.py  980ca2bc16d0_add_image_url_to_user_tables.py
application/backend/application/flask_app/api/: models.py
application/backend/application/flask_app/api/users/: endpoints.py  models.py
application/backend/application/flask_app/api/users/tests/: test_endpoints.py
application/backend/application/flask_app/db/: database.py  models.py
application/backend/application/flask_app/utils/: constants.py
application/frontend/: Dockerfile
application/frontend/react_app/: .dockerignore  next.config.js  package.json
deploy/: build_images.sh  compile_ingress.sh  deploy_images.sh
deploy/kube/backend/: deployment-template.yaml  deployment.yaml  service-template.yaml  service.yaml  values.yaml
deploy/kube/frontend/: deployment-template.yaml  deployment.yaml  service-template.yaml  service.yaml  values.yaml
deploy/kube/ingress/: ingress-template.yaml  ingress.yaml
kube/backend/: deployment.yaml  values.yaml
nginx/: nginx.conf  unsafe-nginx.conf
(+2 files in other folders)
