[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_app"
version = "0.0.1"
authors = [
  { name="Tiny Nakji", email="tinynakji@gmail.com" },
]
description = "API server for Backpocket"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest"
]